# worldmap-server

./: .gitignore  db.db  pyproject.toml
scripts/: build.sh  init_db.py
src/: flash_tasks.py  led_test.py  ledmodule.c  server.py  tasks.py  utils.py
src/bin_src/: kill.c
worldmap_server/: __main__.py  abstract_task.py  config.py  data_provider.py  db.py  module_importer.py  utils.py
worldmap_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
worldmap_server/bin_src/: all.c
worldmap_server/data/: colors.py  countries.py  groups.py  tasks.py
worldmap_server/tasks/: blink.py  flash_all.py  flash_leds.py  flash_neopixels.py  multicolor_transition.py
worldmap_server/tasks/flash/: all.py  leds.py  neopixels.py
